<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practica2</string>
    <string name="action_settings">Settings</string>
    <string name="presentacion">José Luis Cabeza Díaz</string>
    <string name="presentacion2">Servicios Móviles, Práctica 2</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="sesion2">Introduzca:</string>
    <string name="user">Usuario:</string>
    <string name="pass">Contraseña:</string>
    <string name="ok">Aceptar</string>
    <string name="ip_s">IP del servidor:</string>
    <string name="port">Puerto:</string>
    <string name="usr">Datos:</string>
    <string name="servicio">(Posteriormente se gestionará la conexión a un servicio remoto con estos datos)</string>
    <string name="info">Grado en Ingeniería Telemática, 3º curso</string>
    <string name="grado">Ingeniería Telemática, 3ºcurso</string>
    <string name="dato">Introduzca los datos:</string>
    <string name="num1">Número 1:</string>
    <string name="num2">Número 2:</string>
    <string name="cuadrado">Al cuadrado</string>
    <string name="nota">NOTA: Si la casilla \'Al cuadrado\' está marcada, se haran las operaciones con los números al cuadrado.</string>
    <string name="sum">Suma:</string>
    <string name="mul">Resta:</string>
    <string name="mult">Multiplicación:</string>
    <string name="def">0</string>
    <string name="server">server</string>
    <string name="Salir">Salir</string>
    <string name="Cerrar">Cerrar Sesión</string>

</resources>