<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/dato"
        android:textColor="#00ff00"
        android:textSize="@dimen/d"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/num1"
        android:textColor="#00ff00"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/numero1"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:background="@drawable/fondo2"
        android:inputType="numberPassword" >

        <requestFocus />
    </EditText>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num2"
        android:textColor="#00ff00"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/numero2"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:background="@drawable/fondo2"
        android:inputType="numberPassword" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuadrado" 
        android:textColor="#00ff00"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button" />

   

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/nota"
         android:textColor="#00ff00"
        android:textStyle="bold"  />

</TableLayout>
