<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/user"
        android:textColor="#00ff00"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/editText3"
        android:text="@string/port"
        android:textColor="#00ff00"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="97dp"
        android:text="@string/sesion2"
        android:textColor="#00ff00"
        android:textSize="@dimen/d"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/numero1"
        android:text="@string/pass"
        android:textColor="#00ff00"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/numero2"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:background="@drawable/fondo2"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/numero2"
        android:text="@string/ip_s"
        android:textColor="#00ff00"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:background="@drawable/fondo2"
        android:ems="10" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:background="@drawable/fondo2"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/numero1"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:background="@drawable/fondo2"
        android:ems="10" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText4"
        android:text="@string/ok"
        android:textColor="#00ff00"
        android:textStyle="bold" />

</RelativeLayout>