<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="191dp"
        android:gravity="center_horizontal"
        android:text="@string/presentacion2"
        android:textColor="#00ff00"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:gravity="center_horizontal"
        android:text="@string/presentacion"
        android:textColor="#00ff00"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/grado"
        android:textColor="#00ff00"
        android:textSize="@dimen/d"
        android:textStyle="bold|italic" />

</RelativeLayout>