<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:background="@drawable/fondo2"
        android:ems="10"
        android:inputType="number" />

<EditText
    android:id="@+id/editText2"
    android:layout_width="200dp"
    android:layout_height="46dp"
    android:layout_alignLeft="@+id/textView3"
    android:layout_below="@+id/textView3"
    android:background="@drawable/fondo2"
    android:ems="10"
    android:inputType="number" />

<CheckBox
    android:id="@+id/checkBox1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/editText2"
    android:layout_below="@+id/editText2"
    android:layout_marginTop="21dp"
    android:text="@string/cuadrado"
    android:textColor="#00ff00"
    android:textSize="@dimen/d"
    android:textStyle="bold|italic" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/editText1"
    android:layout_below="@+id/editText1"
    android:layout_marginTop="33dp"
    android:text="@string/num2"
    android:textColor="#00ff00"
    android:textSize="@dimen/d"
    android:textStyle="bold|italic" />

<ImageButton
    android:id="@+id/imageButton1"
    style="@style/AppTheme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/textView1"
    android:layout_below="@+id/editText1"
   
    android:src="@drawable/play" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView1"
    android:layout_below="@+id/textView1"
    android:layout_marginLeft="64dp"
    android:layout_marginTop="48dp"
    android:text="@string/num1"
    android:textColor="#00ff00"
    android:textSize="@dimen/d"
    android:textStyle="bold|italic" />

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="93dp"
    android:layout_marginTop="84dp"
    android:gravity="center_horizontal"
    android:text="@string/dato"
    android:textColor="#00ff00"
    android:textSize="@dimen/d2" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView1"
    android:layout_alignRight="@+id/imageButton1"
    android:layout_centerVertical="true"
    android:text="@string/nota"
    android:textColor="#00ff00"
    android:textSize="@dimen/d"
    android:textStyle="italic" />

<ImageView
    android:id="@+id/imageView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView4"
    android:layout_below="@+id/textView4"
    android:layout_marginTop="93dp"
    android:src="@drawable/plus" />

<ImageView
    android:id="@+id/imageView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignTop="@+id/imageView1"
    android:layout_toLeftOf="@+id/imageButton1"
    android:src="@drawable/cross" />

<ImageView
    android:id="@+id/imageView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/imageButton1"
    android:layout_alignTop="@+id/imageView3"
    android:layout_marginLeft="87dp"
    android:src="@drawable/minus" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/textView5"
    android:layout_alignBottom="@+id/textView5"
    android:layout_toRightOf="@+id/checkBox1"
    android:text="@string/def"
    android:textColor="#00ff00"
    android:textSize="@dimen/d3" />

<TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/textView6"
    android:layout_alignBottom="@+id/textView6"
    android:layout_toRightOf="@+id/textView4"
    android:text="@string/def"
    android:textColor="#00ff00"
    android:textSize="@dimen/d3" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/editText2"
    android:layout_below="@+id/imageView1"
    android:layout_marginTop="62dp"
    android:text="@string/def"
    android:textColor="#00ff00"
    android:textSize="@dimen/d3" />

<Button
    android:id="@+id/cerrar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:background="#FFEB3B"
    android:text="@string/Cerrar"
    android:textColor="#000000"
    android:textSize="@dimen/d"
    android:textStyle="bold|italic" />

</RelativeLayout>